# easyscrape-googlesuggest

./: LICENSE  README.md  main.py  setup.cfg  setup.py
easyscrape_googlesuggest/: getsuggestions.py
easyscrape_googlesuggest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
