[metadata]
name = easyscrape_googlesuggest
version = 0.1.1
author = Joseph Ucuzoglu
author_email = baldmancodes@gmail.com
description = Easy web scraping wrapper for Google Suggest results
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amazingjoe/EasyScrape-GoogleSuggest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
